[gd_scene load_steps=29 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://idle_1.png" type="Texture" id=2]
[ext_resource path="res://idle_0.png" type="Texture" id=3]
[ext_resource path="res://idle_2.png" type="Texture" id=4]
[ext_resource path="res://idle_3.png" type="Texture" id=5]
[ext_resource path="res://idle_4.png" type="Texture" id=6]
[ext_resource path="res://idle_5.png" type="Texture" id=7]
[ext_resource path="res://jump_start_0.png" type="Texture" id=8]
[ext_resource path="res://jump_start_1.png" type="Texture" id=9]
[ext_resource path="res://jump_start_2.png" type="Texture" id=10]
[ext_resource path="res://jump_finish_0.png" type="Texture" id=11]
[ext_resource path="res://jump_finish_1.png" type="Texture" id=12]
[ext_resource path="res://jump_finish_2.png" type="Texture" id=13]
[ext_resource path="res://landing_0.png" type="Texture" id=14]
[ext_resource path="res://landing_1.png" type="Texture" id=15]
[ext_resource path="res://landing_2.png" type="Texture" id=16]
[ext_resource path="res://landing_3.png" type="Texture" id=17]
[ext_resource path="res://walk_3.png" type="Texture" id=18]
[ext_resource path="res://walk_4.png" type="Texture" id=19]
[ext_resource path="res://walk_5.png" type="Texture" id=20]
[ext_resource path="res://walk_6.png" type="Texture" id=21]
[ext_resource path="res://walk_7.png" type="Texture" id=22]
[ext_resource path="res://walk_0.png" type="Texture" id=23]
[ext_resource path="res://walk_1.png" type="Texture" id=24]
[ext_resource path="res://walk_2.png" type="Texture" id=25]
[ext_resource path="res://step.mp3" type="AudioStream" id=26]
[ext_resource path="res://jumo.mp3" type="AudioStream" id=27]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": false,
"name": "jump finish",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": false,
"name": "jump start",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": false,
"name": "landing",
"speed": 8.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
} ]

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprites" type="AnimatedSprite" parent="."]
position = Vector2( -7, -9 )
frames = SubResource( 1 )
animation = "idle"
frame = 4
centered = false

[node name="right" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2( -45, -293 )
scale = Vector2( 1, 0.991071 )
polygon = PoolVector2Array( 42, 304.721, 49, 304.721, 49, 291.604, 48, 290.595, 43, 290.595, 42, 291.604 )

[node name="left" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2( -47, -293 )
scale = Vector2( 1, 0.991071 )
polygon = PoolVector2Array( 42, 304.721, 49, 304.721, 49, 291.604, 48, 290.595, 43, 290.595, 42, 291.604 )
disabled = true

[node name="step_stream" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 26 )

[node name="jump_stream" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 27 )

[connection signal="finished" from="jump_stream" to="." method="_on_jump_stream_finished"]
